@@ -39,7 +39,6 @@ class Config(object):
         source_suffix = ('.rst', 'env'),
         source_encoding = ('utf-8-sig', 'env'),
         unused_docs = ([], 'env'),
-        exclude_dirs = ([], 'env'),
         exclude_trees = ([], 'env'),
         exclude_dirnames = ([], 'env'),
         default_role = (None, 'env'),
